--- a/react_apps_wit_tailwind/clipboard/src/index.css
+++ b/react_apps_wit_tailwind/clipboard/src/index.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h3 {
+    @apply text-4xl font-bold text-darkGrayishBlue md:text-5xl;
+  }
+  h5 {
+    @apply text-darkGrayishBlue text-2xl mb-2 font-bold;
+  }
+}
+.section-container {
+  @apply max-w-6xl text-center mx-auto px-4;
+}
+.button-container {
+  @apply flex flex-col justify-center  md:flex-row space-y-6 md:space-y-0 md:space-x-6 text-white text-xl mx-16;
+}
+body {
+  background-image: url("./images/bg-header-desktop.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+@media (max-width: 576px) {
+  body {
+    background-image: url("./images/bg-header-mobile.png");
+  }
+}
